stats tracking + exp refactor + misc fixes